Ensure GCPW does not crash winlogon continuously.

Write a to a sentinel file every time GCPW is started and keep appending to that
file. If the file size reaches a maximum length (maximum consecutive crashes)
then disable GCPW until this file is deleted.
When GCPW reaches a state where it is considered that the user can provide
input to winlogon UI then delete the sentinel file.

Bug: 916129
Change-Id: If78b04f335d601970ce40968338697e81d2a211d
Reviewed-on: https://chromium-review.googlesource.com/c/1384925
Commit-Queue: Tien Mai <tienmai@chromium.org>
Reviewed-by: Roger Tawa <rogerta@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617976}
Former-commit-id: c91b6a87450ee0d00f11722da783ddd778bd09ed