chrome/credential_provider/gaiacp/dllmain.cc
@@ -66,6 +66,13 @@ STDAPI DllCanUnloadNow(void) {
 
 // Returns a class factory to create an object of the requested type.
 STDAPI DllGetClassObject(REFCLSID rclsid, REFIID riid, LPVOID* ppv) {
+  // Check to see if the credential provider has crashed too much recently.
+  // If it has then do not allow it to create any credential providers.
+  if (!credential_provider::VerifyStartupSentinel()) {
+    LOGFN(ERROR) << "Disabled due to previous unsuccessful starts";
+    return E_NOTIMPL;
+  }
+
   return _AtlModule.DllGetClassObject(rclsid, riid, ppv);
 }
 
